--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,15 @@
     padding: 0;
 }
 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-family: sans-serif;
+    background-color: #8ecae6;
+}
+
 .container {
     display: flex;
     width: 1080px;
@@ -13,13 +22,29 @@
 
 .items {
     width: 80%;
+    height: 100%;
     background-color: chartreuse;
 }
 
+.item-active {
+    position: relative;
+    height: 100%;
+}
+
 .item-active img {
-    width: 900px;
+    width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.text-cont {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    text-align: right;
+    color: white;
+    padding: 0 15px 15px 0;
+    width: 80%;
 }
 
 .thumbs {
@@ -30,6 +55,7 @@
 
 .thumb {
     height: 20%;
+    transition: all .2s ease;
 }
 
 .thumbs img {
@@ -41,16 +67,28 @@
     position: absolute;
     left: 50%;
     transform: translate(-50%);
-    background-color: teal;
-    padding: 10px;
+    background-color: #ffb703;
+    color: white;
+    height: 30px;
+    width: 30px;
     border-radius: 50%;
     margin: 10px 0;
+    cursor: pointer;
+    text-align: center;
+    line-height: 30px;
 }
 
+.prev:active {
+    transform: translate(-50%, -10%);
+}
+
+.next:active {
+    transform: translate(-50%, 10%);
+}
 .next {
     bottom: 0;
 }
 
 .active {
-    border: 3px solid teal;
+    border: 10px solid #ffb703;
 }
